HELLODATA-2840 - sonar fixes