@@ -31,7 +31,6 @@ import lombok.Getter;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * enum for context roles
@@ -58,6 +57,6 @@ public enum HdRoleName {
     public static List<HdRoleName> getByContextType(HdContextType type) {
         return Arrays.stream(values())
                 .filter(role -> role.contextType == type || role.name().equals(NONE.name()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
